<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HelloDroidActivity">
    <ImageView
            android:layout_width="370dp"
            android:layout_height="150dp" app:srcCompat="@drawable/ibero_logo" android:id="@+id/iberoImage"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="36dp" android:layout_marginStart="36dp"
            android:contentDescription="@string/logo_de_la_ibero" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/texto_bienvenida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textoContador"
            android:padding="10dp"
            android:paddingLeft="10dp" android:paddingTop="10dp" android:paddingRight="10dp"
            android:paddingBottom="10dp" android:textColor="#090808" android:textSize="@dimen/text_size"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="164dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="36dp" android:layout_marginStart="36dp"
            tools:text="@string/texto_bienvenida"/>
    <ImageView
            android:layout_width="311dp"
            android:layout_height="299dp" app:srcCompat="@drawable/aeroibero" android:id="@+id/avion_img"
            android:contentDescription="@string/imagen_de_vuelo"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="216dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="56dp" android:layout_marginStart="56dp"/>
    <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnLogin"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="524dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="160dp" android:layout_marginStart="160dp"/>
    <TextView
            android:text="@string/textoPrube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/text_prueba"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="572dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="56dp" android:layout_marginStart="56dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>