<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity2">

    <TextView
            android:text="@string/nueva_actividad_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="460dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="60dp" android:layout_marginStart="60dp" android:padding="10dp"
            android:paddingLeft="10dp" android:paddingTop="10dp" android:paddingBottom="10dp" android:textSize="18sp"
            android:textColor="#5E0808" android:layout_marginEnd="63dp" android:layout_marginRight="63dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="19dp"
            app:layout_constraintBottom_toTopOf="@+id/btnRegresar" android:paddingStart="10dp"
            android:paddingRight="10dp"/>
    <Button
            android:text="@string/volver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnRegresar"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="523dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="161dp" android:layout_marginStart="161dp"/>
    <ImageView
            android:layout_width="375dp"
            android:layout_height="455dp" app:srcCompat="@drawable/ejemplo" android:id="@+id/a2img"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="5dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="18dp" android:layout_marginStart="18dp" android:contentDescription="@string/imagena2"/>
</androidx.constraintlayout.widget.ConstraintLayout>